2010-10-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_inside_color_smooth_box_bitmap):
	Assign colors to component colorbox rectangles by rounding the pixel
	coordinate up rather than down.  This empirically gives better results
	in gd.trm, and doesn't seem to hurt other terminals.

2010-10-10  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* src/stdfn.c (not_a_number): Bit-pattern definition of NaN for MINGW

2010-10-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/lua.trm (LUA_options): Null-terminate the "set term lua ..."
	command string at the first semicolon before passing it to lua.

2010-10-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm term/pslatex.trm term/svg.trm term/PostScript/cp1251.ps
	src/term_api.h src/term.c docs/gnuplot.doc: Add support for codepage 1251,
	an alternative 8-bit Cyrillic encoding.

	* src/getcolor.c (quantize_gray) src/getcolor.h src/gplt_x11.c:
	Break out new code into a separate subroutine shared with gnuplot_x11.

2010-10-04  Matthew Biggar  <biggarm@users.sourceforge.net>

	* src/Makefile.am src/alloc.c:  Architecture (Alpha) specific work-
	around to insure that gp_malloc() does not fail on error if 0 bytes
	are successfully allocated.

2010-10-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stdfn.c (not_a_number): Although DJGPP version 2.04 supposedly
	supports atod("NaN"), this version is not universal. Switch to using
	an explicit bit pattern instead.

2010-09-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_inside_color_smooth_box_bitmap):
	The color box is constructed from 128 segments.  If any of these
	straddles a boundary within a defined palette, split it into 2 segments
	so that discrete color transitions are described with pixel accuracy.
	This does not fix imprecision in the palette itself, which can result
	if too few colors are allocated (set palette maxcolors).

2010-09-28  Petr Mikulik  <mikulik@physics.muni.cz>
